@@ -1,3 +1,14 @@
+2007-04-21  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/atof-vax.c (atof_vax_sizeof): Change return type to unsigned.
+	(md_atof): Make number_of_chars unsigned.  Revert last change.
+	* config/tc-or32.c (md_apply_fix): Delete bogus assertions.
+	* config/tc-sh.c (sh_optimize_expr): Only define for OBJ_ELF.
+	* config/tc-sh.h (md_optimize_expr): Likewise.
+	* config/tc-sh64.c (shmedia_md_pcrel_from_section): Delete bogus
+	assertion.
+	* config/tc-xtensa.c (convert_frag_immed_finish_loop): Likewise.
+
 2007-04-21  Nick Clifton  <nickc@redhat.com>
 
 	* config/atof-vax.c (md_atof): Fix comparison inside know().
